--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^6.0.46",
     "@types/sinon": "^1.16.35",
     "chai": "^3.5.0",
+    "http-server": "^0.10.0",
     "intern": "~3.4.1",
     "sinon": "^2.0.0",
     "typescript": "~2.4.1"
