--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@dojo/i18n": "~0.1.0",
     "@dojo/routing": "~0.1.0",
     "@dojo/shim": "~0.1.0",
-    "@dojo/widget-core": "^0.1.0",
+    "@dojo/widget-core": "file:../../dojo2/widget-core/dist/dojo-widget-core-0.1.2-alpha.1.tgz",
     "@dojo/widgets": "~0.1.0"
   },
   "devDependencies": {
